[gd_scene load_steps=4 format=3 uid="uid://bggb1gnxppq0x"]

[ext_resource type="Script" path="res://addons/inventory-system/editor/items/base_property.gd" id="1_43ubu"]

[sub_resource type="Image" id="Image_ric32"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_45r6g"]
image = SubResource("Image_ric32")

[node name="BaseProperty" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
size_flags_horizontal = 3
script = ExtResource("1_43ubu")
icons_name = Array[String](["null", "bool", "int", "float", "String", "Vector2", "Vector2i", "Rect2", "Rect2i", "Vector3", "Vector3i", "Transform2D", "Vector4", "Vector4i", "Plane", "Quaterion", "AABB", "Basis", "Transform3D", "Projection", "Color", "StringName", "NodePath", "RID", "Object", "Callable", "Signal", "Dictionary", "Array", "PackedByteArray", "PackedInt32Array", "PackedInt64Array", "PackedFloat32Array", "PackedFloat64Array", "PackedStringArray", "PackedVector2Array", "PackedVector3Array", "PackedColorArray"])

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.270588, 0.576471, 0.92549, 1)

[node name="ValueType" type="TextureRect" parent="."]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = SubResource("ImageTexture_45r6g")
stretch_mode = 3

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Key"

[node name="KeyLineEdit" type="LineEdit" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Key here..."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="Value" type="Label" parent="."]
layout_mode = 2
text = "Value"

[node name="Control" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NoCompatible" type="Label" parent="Control"]
visible = false
layout_mode = 2
tooltip_text = "Use the default inspector of godot to edit this item's value."
mouse_filter = 0
text = "This type is not compatible with the item editor."

[node name="ValueBool" type="CheckBox" parent="Control"]
visible = false
layout_mode = 2
button_pressed = true

[node name="ValueInteger" type="SpinBox" parent="Control"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
rounded = true
allow_greater = true
allow_lesser = true

[node name="ValueFloat" type="SpinBox" parent="Control"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
step = 0.001
allow_greater = true
allow_lesser = true

[node name="ValueString" type="LineEdit" parent="Control"]
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Value here..."
caret_blink = true
caret_blink_interval = 0.5

[node name="ValueColor" type="ColorPickerButton" parent="Control"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="DynamicProperty" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="DynamicProperty"]
layout_mode = 2
text = "Is Dynamic"

[node name="CheckBox" type="CheckBox" parent="DynamicProperty"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Delete"
icon = SubResource("ImageTexture_45r6g")
flat = true

[node name="RemoveConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(400, 100)
dialog_text = "Remove?"

[connection signal="toggled" from="Control/ValueBool" to="." method="_on_value_bool_toggled"]
[connection signal="value_changed" from="Control/ValueInteger" to="." method="_on_value_integer_value_changed"]
[connection signal="value_changed" from="Control/ValueFloat" to="." method="_on_value_float_value_changed"]
[connection signal="text_changed" from="Control/ValueString" to="." method="_on_value_line_edit_text_changed"]
[connection signal="color_changed" from="Control/ValueColor" to="." method="_on_value_color_color_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="confirmed" from="RemoveConfirmationDialog" to="." method="_on_remove_confirmation_dialog_confirmed"]
